<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fb_app_authority">FACEBOOK_VENDOR_AUTHORITY</string>
    <string name="fb_app_id">FACEBOOK_PAGE_ID</string>
    <string name="fb_access_token">FACEBOOK_TOKEN</string>
    <string name="fb_page_id">FACEBOOK_PAGE_ID</string>
    <string name="google_map_api_key">GOOGLE_MAPS_API_KEY</string>

    <string name="app_name">VENDOR_APP_NAME</string>
    <string name="know_us">KNOWUS</string>
    <string name="service_charges_label">SERVICE_CHARGES</string>
    <string name="service_tax_label">SERVICE_TAX</string>
    <string name="vat_label">VAT</string>
    <string name="other_charges_label">OTHER_CHARGES</string>
    <string name="total_amount_label">TOTAL_AMOUNT</string>

    <string name="version_no">Beta-1.0</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open"> </string>
    <string name="navigation_drawer_close"> </string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">Navigation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="title_activity_offer">Offers</string>
    <string name="title_activity_product_list">Catalog</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_policy">Policy</string>
    <string name="title_activity_cart">Tray</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_feed_back">Feedback</string>
    <string name="title_activity_product_details"></string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="title_activity_store_list">Stores</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="log"><u>Already have an account?Login</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_grid_product_list">Catalog</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_buy_now">BuyNowActivity</string>
    <string name="title_activity_payment_start">PaymentStartActivity</string>
    <string name="title_activity_order_history">Order History</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>




    <array name="spinner_no">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>

    </array>
    <string name="title_activity_example_cart">ExampleCartActivity</string>
    <string name="title_activity_tab_view">TabViewActivity</string>
    <string name="title_activity_activity_scrolling_home">ActivityScrollingHome</string>
    <string name="title_activity_appointment">Appointments</string>

    <string name="sign_up_name_hint">Full name</string>
    <string name="sign_up_mobile_no_hint">Mobile Number *</string>
    <string name="sign_up_email_hint">Email Id *</string>
    <string name="sign_up_password_hint">Password *</string>

    <string name="login_mobile_no">Mobile Number</string>
    <string name="login_password">Password</string>
    <string name="payment_cod">COD</string>
    <string name="payment_paypal">PAYPAL</string>
    <string name="payment_no_pay">-</string>

    <string name="policy_heading">Terms and Conditions</string>
    <string name="terms_condition_Paragraph">TERMS_CONDITION_PARAGRAPH</string>
    <string name="vendor_policy">VENDOR_POLICY</string>
    

</resources>
